--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -17,10 +17,12 @@
 
 // ---
 
-// @import "./vendor/index.scss";
+@import "./vendor/index.scss";
 
 @import "./variables.scss";
 @import "./keyframes.scss";
 @import "./mixins.scss";
 
 @import "./global/index.scss";
+
+@import "./blocks/index.scss";
