--- a/src/styles/global/container.scss
+++ b/src/styles/global/container.scss
@@ -1,18 +1,14 @@
 .container {
   width: 100%;
-  max-width: 1180px;
+  max-width: 1020px;
   margin: 0 auto;
 
-  @include viewport--xl {
-    max-width: 920px;
-  }
-
   @include viewport--lg {
-    max-width: 680px;
+    max-width: 900px;
   }
 
   @include viewport--md {
-    max-width: auto;
-    padding: 0 20px;
+    max-width: none;
+    padding: 0 30px;
   }
 }
