--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,15 @@
 .header {
-  border-bottom: 1px solid $color-gray;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: $color-gray;
+    height: 1px;
+  }
 }
 
 .header__container {
