--- a/src/styles/blocks/main-nav.scss
+++ b/src/styles/blocks/main-nav.scss
@@ -39,7 +39,7 @@
   height: 2px;
   vertical-align: bottom;
   background-color: $color-light-black;
-  transition: transform 0.3s ease;
+  transition: background-color 0.3s;
 
   &::before,
   &::after {
@@ -49,6 +49,9 @@
     width: 100%;
     height: 2px;
     background: $color-light-black;
+    transform-origin: 50% 50%;
+    transition: top 0.15s 0.15s ease,
+                transform 0.15s ease;
   }
 
   &::before {
@@ -65,14 +68,16 @@
     &::before,
     &::after {
       top: 0;
+      transition: top 0.15s ease,
+                  transform 0.15s 0.15s ease;
     }
 
     &::before {
-      transform: rotate3d(0,0,1,45deg);
+      transform: rotate3d(0, 0, 1, 45deg);
     }
 
     &::after {
-      transform: rotate3d(0,0,1,-45deg);
+      transform: rotate3d(0, 0, 1, -45deg);
     }
   }
 }
@@ -84,7 +89,22 @@
   width: 100%;
 
   @include viewport--md {
-    flex-direction: column;
+    .main-nav--open & {
+      position: fixed;
+      top: 80px;
+      bottom: 0;
+      left: 0;
+      right: 0;
+
+      display: block;
+
+      text-align: center;
+
+      background-color: $color-white;
+
+      overflow-x: hidden;
+      overflow-y: auto;
+    }
   }
 }
 
