--- a/src/styles/blocks/site-list.scss
+++ b/src/styles/blocks/site-list.scss
@@ -5,6 +5,7 @@
 
   @include viewport--md {
     flex-direction: column;
+    padding-top: 40px;
   }
 }
 
@@ -14,12 +15,25 @@
   color: $color-black;
   transition: box-shadow 0.3s;
 
-    &--active {
+  &--active {
     box-shadow: inset 0 2px 0 $color-blue-2;
     pointer-events: none;
   }
 
   &:hover {
     box-shadow: inset 0 2px 0 $color-blue-2;
+  }
+
+  @include viewport--md {
+    font-size: 24px;
+    box-shadow: none;
+
+    &--active {
+      color: $color-blue-2;
+    }
+
+    &:hover {
+      box-shadow: none;
+    }
   }
 }
