--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,6 +2,7 @@ $color-black:                     #000000;
 $color-light-black:               #343434;
 $color-gray:                      #ebebeb;
 $color-yellow-white:              #fcfbf9;
+$color-white:                     #ffffff;
 $color-blue-1:                    #1a73e8;
 $color-blue-2:                    #2980b9;
 $color-transparent:               rgba(255, 255, 255, 0);
