--- a/src/styles/blocks/index.scss
+++ b/src/styles/blocks/index.scss
@@ -2,3 +2,6 @@
 @import "./main-nav.scss";
 @import "./site-list.scss";
 @import "./user-list.scss";
+@import "./swiper.scss";
+@import "./reviews.scss";
+
