--- a/src/styles/blocks/site-list.scss
+++ b/src/styles/blocks/site-list.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
   align-items: center;
 
-  @include viewport--md {
+  @include viewport--lg {
     flex-direction: column;
     padding-top: 40px;
   }
@@ -24,7 +24,7 @@
     box-shadow: inset 0 2px 0 $color-blue-2;
   }
 
-  @include viewport--md {
+  @include viewport--lg {
     font-size: 24px;
     box-shadow: none;
 
