--- a/src/styles/global/container.scss
+++ b/src/styles/global/container.scss
@@ -1,14 +1,18 @@
 .container {
   width: 100%;
-  max-width: 1020px;
+  max-width: 1100px;
   margin: 0 auto;
+  padding: 0 40px;
 
-  @include viewport--lg {
-    max-width: 900px;
+  @include viewport--xl {
+    max-width: 920px;
   }
 
-  @include viewport--md {
-    max-width: none;
-    padding: 0 30px;
+  @include viewport--lg {
+    max-width: 760px;
+  }
+
+  @include viewport--sm {
+    padding: 0 20px;
   }
 }
