--- a/src/styles/global/utils.scss
+++ b/src/styles/global/utils.scss
@@ -1,6 +1,7 @@
 .wrapper {
   display: grid;
   grid-template-rows: min-content 1fr min-content;
+  grid-template-columns: 100%;
   min-height: 100vh;
 }
 
