--- a/src/styles/blocks/index.scss
+++ b/src/styles/blocks/index.scss
@@ -6,3 +6,7 @@
 @import "./reviews.scss";
 @import "./todo.scss";
 @import "./article.scss";
+@import "./footer.scss";
+@import "./contacts.scss";
+@import "./social.scss";
+@import "./copyright.scss";
